# LH_CD_ARTUR_ALBUQUERQUE_MACHADO

./: Makefile  README.md  pyproject.toml  requirements.txt
Top_Film_Analysis/: __init__.py  dataset.py  features.py  plots.py
Top_Film_Analysis/modeling/: predict.py  train.py
data/processed/: check_1_processing.csv  check_2_processing.csv  check_3_processing.csv  check_4_processing.csv  df_processed.csv  final_df.csv  pre_feature_eng.csv
models/: melhor_modelo.pkl
notebooks/: EDA.ipynb  atual.csv  atual_atual.csv  clean.ipynb  clean_columns.ipynb  cleaning.ipynb  df_enriched.csv  df_enriquecido.csv  df_enriquecido_certificado_remapeado.csv  feature_add.ipynb  pred.ipynb  tete.csv
