[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Top_Film_Analysis"
version = "0.0.1"
description = "An\u00e1lise de filmes em contexto do mercado"
authors = [
  { name = "Artur_Machado" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["Top_Film_Analysis"]
include = ["pyproject.toml", "Top_Film_Analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Top_Film_Analysis"]
force-sort-within-sections = true

